# BYOM

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE
include/byom/: dynamic_view.hpp
include/byom/adapted/: builtin.hpp  c_str.hpp  empty.hpp  fusion.hpp  map.hpp  ostream.hpp  string.hpp  vector.hpp
include/byom/ext/: arithmetic.hpp  c_str.hpp  fallback.hpp  fusion.hpp  map.hpp  nullptr.hpp  qhash.hpp  qlist.hpp  qmap.hpp  qobject.hpp  qstring.hpp  qvariant.hpp  string.hpp  tuple.hpp  vector.hpp
src/: CMakeLists.txt  qobject.cpp  qvariant.cpp
test/: CMakeLists.txt  _test.cpp  _test.hpp  arithmetic.cpp  builtin.cpp  c_str.cpp  fusion.cpp  map.cpp  qhash.cpp  qlist.cpp  qmap.cpp  qobject.cpp  qstring.cpp  qvariant.cpp  string.cpp  tuple.cpp  vector.cpp
